--- a/src/main/resources/templates/editorial_form.html
+++ b/src/main/resources/templates/editorial_form.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
     <head>
         <meta charset="ISO-8859-1">
-        <title>Registro de Libros</title>
+        <title>Registro de Editoriales</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <link rel="stylesheet" href="/css/formulario.css">
     </head>
@@ -63,17 +63,9 @@
               </ul>
             </div>
           </nav>
-
-
-
-
-
-
-
         <div class="container-fluid m-5 contenedor">
+            <form class="formulario"  th:action="@{/editorial/registro}" method="POST">
 
-            <form class="formulario" action="/libro/registro" method="POST">
-                
                 <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError" >
                     <div class="card-body">
                         <h5 class="card-title">Error 👎</h5>
@@ -88,42 +80,12 @@
                 </div>
 
                 <div class="form-group my-3">
-                    <label class="mb-2">Cargar Libro</label> 
-                    <input type="number" class="form-control" name="isbn" placeholder="ISBN">
+                    <label class="mb-2">Cargar Editoriales</label>
+                    <input type="text" class="form-control" name="nombre"  placeholder="Nombre del Editorial">
                 </div>
-                <div class="form-group my-3">
-                    <input type="text" class="form-control" name="titulo" placeholder="Titulo del Libro">
-                </div>
-
-                <div class="form-group my-3">
-                    <input type="number" class="form-control" name="ejemplares" placeholder="Cantidad de Ejemplares">
-                </div>
-                
-                <div class="form-group my-3">
-                    <select name="idAutor">
-                        <option>Seleccionar Autor</option>
-                        <option th:each="autor : ${autores}"
-                                th:value="${autor.id}"
-                                th:text="${autor.nombre}"
-                        >
-                    </select>
-                </div>
-
-                <div class="form-group my-3">
-                    <select name="idEditorial">
-                        <option>Seleccionar Editorial</option>
-                        <option th:each="editorial : ${editoriales}"
-                                th:value="${editorial.id}"
-                                th:text="${editorial.nombre}"
-                        >
-                    </select>
-                </div>
-
                 <button type="submit" class="btn btn-primary mt-3 botones">Guardar</button>
             </form>
-
-
-            <section class=" text-center container">
+                    <section class=" text-center container">
                 <div class="row mt-3">
                     <div class="divVolver">
                         <a th:href="@{/}" class="btn btn-secondary my-2 botonVolver botones">Volver</a>
